force-app/main/default/objects/FinancialTransaction__c/FinancialTransaction__c.object-meta.xml
<CustomObject>
    <label>Financial Transaction</label>
    <nameField>
        <displayFormat>TR-{0000000}</displayFormat>
        <label>Financial Transaction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>