force-app/main/default/objects/FinancialTransaction__c/fields/Currency_Type__c.field-meta.xml
<CustomField>
    <fullName>Currency_Type__c</fullName>
    <label>Currency Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>