force-app/main/default/objects/FinancialTransaction__c/fields/FinancialAccount__c.field-meta.xml
<CustomField>
    <fullName>FinancialAccount__c</fullName>
    <label>Financial Account</label>
    <referenceTo>FinancialAccount__c</referenceTo>
    <relationshipLabel>Financial Transactions</relationshipLabel>
    <relationshipName>Financial_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>