force-app/main/default/objects/FinancialTransaction__c/fields/Merchant_ABN__c.field-meta.xml
<CustomField>
    <fullName>Merchant_ABN__c</fullName>
    <label>Merchant ABN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>