force-app/main/default/objects/FinancialTransaction__c/fields/MerchantBSB__c.field-meta.xml
<CustomField>
    <fullName>MerchantBSB__c</fullName>
    <label>Merchant BSB</label>
    <length>6</length>
    <type>Text</type>
</CustomField>