force-app/main/default/objects/FinancialTransaction__c/fields/MerchantName__c.field-meta.xml
<CustomField>
    <fullName>MerchantName__c</fullName>
    <label>Merchant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>