force-app/main/default/objects/FinancialTransaction__c/validationRules/FinancialTransactionCannotBeModified.validationRule-meta.xml
<ValidationRule>
    <fullName>FinancialTransactionCannotBeModified</fullName>
    <active>true</active>
    <description>Financial Transaction Cannot Be Modified</description>
    <errorConditionFormula>OR( 
					ISCHANGED(Amount__c) , 
					ISCHANGED(Date__c) ,  
					ISCHANGED(Time__c) ,
					ISCHANGED(Merchant_ABN__c) , 
					ISCHANGED(MerchantBSB__c) ,
					ISCHANGED(Type__c) )</errorConditionFormula>
    <errorMessage>A Financial transaction cannot be changed once it is created.</errorMessage>
</ValidationRule>